// for syntax highlighting we use proto3 version
syntax="proto3";

// path to our current folder, where the generated files will be placed
option go_package = "./proto";

// package name for our proto file
package greet_service;

// defining all the Services for the gRPC
service GreetService {
   rpc SaveUser(SaveRequest) returns (User);
   rpc GetUsersEmail(stream SaveRequest) returns (User);
   rpc GetIdUserMail (User)  returns (stream SaveRequest);
   rpc GetAlllUser (stream SaveRequest) returns (stream User);
}


message NoParam {};

message SaveRequest {
    string name = 1;
    string surName = 2;
    string email = 3;

}

message User {
    int64 id=1;
    string name = 2;
    string surName = 3;
    string email = 4;
}

message UserOrder {
    int64 userId=1;
    repeated string names = 2;
}

message WantedList {
    repeated string messages = 1;
}


